# sacf

./: .gitignore  CMakeLists.txt  pyproject.toml  setup.py  tox.ini
.github/workflows/: pythontests.yml
cpp/correlator/: Correlator.cpp  correlator_bindings.cpp
cpp/datastructure/: DataStructure.cpp  datastructure_bindings.cpp
include/sacf/: Correlator.h
sacf/: CMakeLists.txt
sacf/datastructure/: DataStructure.cpp
src/sacf/: __init__.py  sacf.py
tests/: sacf_test.py
