[build-system]
requires = ["setuptools>=42", "wheel", "cmake", "pybind11[global]"]
build-backend = "setuptools.build_meta"

[project]
name = "sacf"
version = "2.0"
description = "A selective estimator of the autocorrelation function for non-uniformly sampled timeseries data"
authors = [
    { name = "Joshua Briegal", email = "jtb34@cam.ac.uk" },
    { name = "David Degen", email = "ddegen@ethz.ch" }
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: C++",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License"
]
urls = { "Homepage" = "https://github.com/joshbriegal/sacf/" }
dependencies = ["numpy"]

[project.optional-dependencies]
test = ["pytest", "tox"]
dev = ["ruff"]

[tool.setuptools.packages.find]
where = ["sacf"]
