[build-system]
requires = ["scikit-build-core>=0.4", "pybind11[global]"]
build-backend = "scikit_build_core.build"


[project]
name = "sacf"
version = "3.0"
description = "A selective estimator of the autocorrelation function for non-uniformly sampled timeseries data"
requires-python = ">=3.8"
keywords = ["time series", "autocorrelation"]
readme = "readme.md"
authors = [
    { name = "Joshua Briegal", email = "jtb34@cam.ac.uk" },
    { name = "David Degen", email = "ddegen@ethz.ch" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License"
]

[project.optional-dependencies]
test = ["numpy", "pytest", "tox"]
dev = ["ruff"]

[project.urls]
"Homepage" = "https://github.com/joshbriegal/sacf"
"Source" = "https://github.com/joshbriegal/sacf"
"Bug Tracker" = "https://github.com/joshbriegal/sacf/issues"


[tool.scikit-build]
cmake.source-dir = "."
wheel.packages = ["src/sacf"]
